--- a/index.qmd
+++ b/index.qmd
@@ -5,11 +5,11 @@ about:
   template: marquee
 ---
 
-Hello, I'm Asael, a creepy statistician that plays with R, love-hates Python, plays way too much Pokemon, talks a lot of sh@#t, is crazy for traveling, and gets depressed often. Welcome to my blog! :). 
+Hello, I'm Asael, a statistician that programs in R, love-hates Python, plays way too much Pokemon, talks a lot, is crazy for traveling, and gets depressed often. Welcome to my blog! :). 
 
-If, for any reason, you still want to know more about my work, please check this section where I brag [about myself](about.qmd) or take home a crappy paper ([CV](CVAsaelWork.pdf)) for free XD. 
+If want to know more about my work, please check this section where I brag [about myself](about.qmd) or take home a paper ([CV](CVAsaelWork.pdf)) for free XD. 
 
-  + **Spoilers alert**: I like to sing out loud with my headphones on in public spaces, so if you find a crazy dude badly singing at a coffee shop in front of the computer, it's me! Please say hi! :).
+  + **Spoilers alert**: I like to sing out loud with my headphones on in public spaces, so if you find a dude badly singing at a coffee shop in front of the computer, it's me! Please say hi! :).
   
   + **Btw:** I am currently obsessed with Aurora, Parcels, Bandalos Chinos, Tux Lunan, Jungle and Foals.
   
@@ -30,8 +30,3 @@ Well, yes! One of my major flaws is my English writing, so I am doing this websi
 After three long years abroad studying, traveling, researching, surviving this sh@#t-show (COVID), snow, and rejections, I am going home! For now, this webpage is my new attempt to organize my mess.
 
 If you want to know more about it or are having a heavy season and want somebody to talk to, send me a friend request or mail me. Who knows, you might have a new friend :).
-
-## Important 
- 
- If you find this a joke or I am too mean, you need to know that I am an a@#s. Please don't judge me or do it; I don't really care ;).
- 
