--- a/ABM/posts/ABR/index.qmd
+++ b/ABM/posts/ABR/index.qmd
@@ -1,10 +1,15 @@
 ---
 title: "Applied Bayesian Regression"
 author: "Asael Alonzo Matamoros"
+date: "2022-11-13"
+categories: [news,introduction, Baseline]
+image: "image.jpg"
 bibliography: ref.bib
 about:
   template: marquee
 ---
+
+Este post presenta el contenido, direcciones y detalles de "*Applied Bayesian Regression.*"
 
 La segunda parte del curso se impartirá regresión Bayesiana aplicada, el objetivo principal es que el estudiante pueda resolver un problema de regresión con un conjunto de datos reales mediante un ordenador, independiente del enfoque de inferencia a utilizar. 
 
