some minor updates
Some minor updates

--- a/DOF/posts/WDF1/index.qmd
+++ b/DOF/posts/WDF1/index.qmd
@@ -10,7 +10,7 @@ about:
 
 A story of the my last month.
 
-Hello everyone! My name is Asael Alonzo Matamoros, and I just came back home (Honduras). After 2 years of living in Finland, I only got depression, unfinished business, and a will to write about statistics (and obviously about the stupid Colombian telenovela I call my life). 
+Hello everyone! My name is Asael Alonzo Matamoros, and I just came back home (*Honduras*). After 2 years of living in Finland, I got depression, unfinished business, and a will to write about statistics (*and obviously about the stupid Colombian telenovela I call my life*). 
 
 I got to say, it has been a month since I came back, and the adaptation has been a shit show, but not everything is terrible. Some things turn out to be good or even enjoyable. For example, I am invited to three weddings, all of whom are from the same group of friends. Yes! I am the "single one," but I am happy to celebrate this significant event with them out of this minor detail. And obviously, I can't forget that now I live with five incredible cutenesses that are always happy to see me. Please check them out in the following picture.
 
