--- a/index.qmd
+++ b/index.qmd
@@ -27,4 +27,4 @@ If you want to know more about it or are having a heavy season and want somebody
 
 **Spoilers alert**: I like to sing out loud with my headphones on in public spaces, so if you find a dude badly singing at a coffee shop in front of the computer, it's me! Please say hi! :).
 
-No more elevator talks. Let me introduce you to my blog: Depression and other stories!
+No more elevator talks. Let me introduce you to my blog: [Depression and other stories](https://asael697.github.io/DOF/)!
