--- a/ABM/posts/Logistic-GLM/index.qmd
+++ b/ABM/posts/Logistic-GLM/index.qmd
@@ -14,6 +14,8 @@ format:
     anchor-sections: true
 ---
 
+Este post presenta un análisis la base `Titanic` usando un modelo lineal generalizado Logístico.
+
 El nombre del barco "Titanic" se inspira de los titanes de la mitología Griega, y pese que fue de los cruceros más grandes de su época, se hundió en su primera excursión, ocasionando la muerte de miles de sus tripulantes. Se desea crear un modelo que prediga el número de sobrevivientes en la excursión, para eso utilizaremos los registros de muerte del evento, la base de datos se divide en dos conjuntos
 
   + `Train`: que contiene 891 registros, usado para entrenar los modelos de clasificación.
