--- a/ABM/posts/GLMs/index.qmd
+++ b/ABM/posts/GLMs/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Modelos Lineales Generalizados Aplicados"
+title: "Modelos lineales generalizados aplicados"
 author: "Asael Alonzo Matamoros."
 date: "2022-11-14"
 categories: [Regression, code, GLMs]
