--- a/ABM/posts/GAM/index.qmd
+++ b/ABM/posts/GAM/index.qmd
@@ -14,7 +14,7 @@ format:
     anchor-sections: true
 ---
 
-Este post presenta un análisis la base `Titanic` usando un modelo aditivo generalizado Logístico.
+Este post presenta un análisis la base `Titanic` usando un modelo aditivo generalizado logístico.
 
 Los modelos aditivos generalizados (GAMs) relacionan forma no lineal al conjunto de v.a. independientes $Z = \{Z_1,Z_2,\ldots,Z_n\}$, tal que $Z_i = (Y_i,X_i) \in \mathbb R^{d+1}$. La colección $Z$ sigue un GAM si: 
 
@@ -184,7 +184,6 @@ x = AIC(m1,m2)
 
 # Estética
 x = data.frame(x)
-x
 x$modelo = c("M1","M2")
 colnames(x) = c("df","AIC","Modelo")
 
