--- a/ABM/posts/Gaussian-LM/index.qmd
+++ b/ABM/posts/Gaussian-LM/index.qmd
@@ -95,6 +95,7 @@ summary(m1)
 Pese que la función `lm` de `R` realiza un análisis de incertidumbre al presentar una *Prueba-t* de significacia para cada parámetro $\beta_i$, no presenta los intervalos de confianza. Estos serán estimados con **Bootstrap**. La siguiente función obtiene una muestra Bootstrap de los parámetros desconocidos $\beta$.
 
 ```{r}
+#| code-fold: true
 lm_boots = function(y,x,B = 1000){
   n = length(y)
   est = NULL
@@ -165,6 +166,7 @@ Adicional al modelo $M_1$, ajustamos dos modelos mas:
 $$M_2: \quad mpg \sim N(hp+gear+carb,\sigma^2),$$
 $$M_3: \quad mpg \sim N(wt+gear+carb,\sigma^2).$$
 ```{r}
+#| code-fold: true
 m2 = lm(mpg~hp+gear+carb,data = df)
 m3 = lm(mpg~wt+gear+carb,data = df)
 ```
@@ -223,56 +225,39 @@ kfold = function(df,k){
     p1 = predict(m1,dfP)
     p2 = predict(m2,dfP)
     p3 = predict(m3,dfP)
-    # Calcular AIC y RMSE
-    aic = c(
-            AIC(m1),
-            AIC(m2),
-            AIC(m3)
-            )
+    
+    # Calcular  RMSE
     rmse = c(
              RMSE(pred =  p1,obs = dfP[,1]),
              RMSE(pred =  p2,obs = dfP[,1]),
              RMSE(pred =  p3,obs = dfP[,1])
              )
-    mae = c(
-            MAE(pred =  p1,obs = dfP[,1]),
-            MAE(pred =  p2,obs = dfP[,1]),
-            MAE(pred =  p3,obs = dfP[,1])
-            )
-    mape = c(
-              mean(abs((p1-dfP[,1])/dfP[,1])),
-              mean(abs((p2-dfP[,1])/dfP[,1])),
-              mean(abs((p3-dfP[,1])/dfP[,1]))
-              )
     # Unir los datos
-    mat = rbind(mat,c(aic,rmse,mae,mape)) 
+    mat = rbind(mat,rmse) 
   }
-  colnames(mat) = c("AIC1","AIC2","AIC3","RMSE1","RMSE2","RMSE3","MAE1","MAE2",
-                    "MAE3","MAPE1","MAPE2","MAPE3")
+  colnames(mat) = c("RMSE1","RMSE2","RMSE3")
   row.names(mat) = NULL
   return(mat)
 }
 ```
 
-@tbl-cv presenta los resultados obtenidos al realizar 5-fold-cv, bajo todos los criterios presentados, el modelo $M_3$ presenta las mejores predicciones. Por lo tanto, $M_3$ es el modelo con Mayor aprendizaje.
+@tbl-cv presenta los resultados obtenidos al realizar 5-fold-cv usando el rmse como criterio de información, el modelo $M_3$ presenta las mejores predicciones. Por lo tanto, $M_3$ es el modelo con Mayor aprendizaje.
 
 ```{r}
 #| label: tbl-cv
-#| tbl-cap: "Criterios de información de los modelos. Mediante Validación cruzada. La tabla presenta los criterios AIC, RMSE, MAE y MAPE bajo un 10-fold cv."
+#| tbl-cap: "Criterios de información de los modelos. Mediante Validación cruzada. La tabla presenta los RMSE de cada modelo. bajo un 5-fold cv."
 
 rst = kfold(df = df,k = 5)
 x = t(apply(rst,MARGIN = 2,FUN = "quantile",probs = c(0.025,0.5,0.975)))
 
 # Estética
 x = data.frame(x)
-x$pars =  c("AIC1","AIC2","AIC3","RMSE1","RMSE2","RMSE3","MAE1","MAE2",
-                    "MAE3","MAPE1","MAPE2","MAPE3")
-colnames(x) = c("q2.5%","Median","q97.5%","Criterio")
+x$pars =  c("M1","M2","M3")
+colnames(x) = c("q2.5%","Median","q97.5%","RMSE")
 
 ft = flextable(x[c(4,1,2,3)])
 autofit(ft)
 ```
-
 
 ## Referencias
 
